# baseconverter

./: Cargo.toml  README.md
src/: cli.rs  error.rs  lib.rs  main.rs
