[package]
name = "baseconverter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
miette = { version = "5.4.1", features = ["fancy"] }
thiserror = "1.0.37"
